# rust-db-manager-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-project.yml  publish-version.yml
src/: lib.rs  main.rs
src/commons/configuration/: web_configuration.rs
src/commons/exception/: api_exception.rs  auth_exception.rs
src/domain/: builder_db_connection_data.rs  builder_db_service.rs  utils.rs
src/domain/cookie/: builder_cookie.rs  builder_jar.rs  cookie.rs  jar.rs  same_site.rs
src/infrastructure/: controller.rs  controller_collection.rs  controller_database.rs  controller_document.rs  controller_server.rs  controller_service.rs  db_assets.rs  handler.rs  pagination.rs  services_jwt.rs  utils.rs
src/infrastructure/dto/: dto_create_document.rs  dto_data_base_field.rs  dto_data_base_group.rs  dto_db_resources.rs  dto_query_pagination.rs  dto_server_status.rs  dto_update_document.rs
src/infrastructure/dto/collection/: dto_collection_data.rs  dto_collection_definition.rs  dto_generate_collection_query.rs  dto_rename_collection_query.rs
src/infrastructure/dto/data_base/: dto_generate_data_base_query.rs
src/infrastructure/dto/db_service/: dto_db_connection_data.rs  dto_db_service.rs  dto_db_service_lite.rs  dto_db_service_response.rs  dto_db_service_response_connection.rs  dto_db_service_suscribe.rs  dto_db_service_web_category.rs  dto_paginated_collection.rs
src/infrastructure/dto/definition/: dto_collection_definition.rs  dto_field_atribute.rs  dto_field_attribute_default_definition.rs  dto_field_attribute_definition.rs  (+3 more)
(+43 files in other folders)
