[package]
name = "rust_db_manager_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
axum = {version = "0.7.3", features = ["tokio"]}
tower-http = { version = "0.5.2", features = ["cors"] }
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27.0"
uuid = "1.8.0"
cargo_metadata = "0.18.1"
base64-compat = "1.0.0"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
regex = "1.10.4"
rust_db_manager_core = { git = "https://github.com/Rafael24595/rust-db-manager.git", branch = "dev" }